feat(completions): update git

--- a/completions/git/language/en-US.json
+++ b/completions/git/language/en-US.json
@@ -25,9 +25,9 @@
           ]
         },
         {
-          "name": "--object-format=",
+          "name": "--object-format",
           "tip": [
-            "U: --object-format=<format>\n",
+            "U: --object-format <format>\n",
             "Specify the given object <format> (hash algorithm) for the repository.\n",
             "The valid values are sha1 and (if enabled) sha256. sha1 is the default."
           ],
@@ -63,17 +63,17 @@
           ]
         },
         {
-          "name": "--template=",
+          "name": "--template",
           "tip": [
-            "U: --template=<template-directory>\n",
+            "U: --template <template-directory>\n",
             "Specify a custom template directory for repository initialization."
           ],
           "next": 0
         },
         {
-          "name": "--separate-git-dir=",
+          "name": "--separate-git-dir",
           "tip": [
-            "U: --separate-git-dir=<git-dir>\n",
+            "U: --separate-git-dir <git-dir>\n",
             "Instead of initializing the repository as a directory to either $GIT_DIR or ./.git/, create a text file there containing the path to the actual repository.\n",
             "This file acts as a filesystem-agnostic Git symbolic link to the repository.\n",
             "If this is a reinitialization, the repository will be moved to the specified path."
@@ -86,7 +86,7 @@
             "--initial-branch="
           ],
           "tip": [
-            "U: -b <branch-name> | --initial-branch=<branch-name>\n",
+            "U: -b <branch-name> | --initial-branch <branch-name>\n",
             "Use <branch-name> for the initial branch in the newly created repository.\n",
             "If not specified, fall back to the default name."
           ],
@@ -443,6 +443,12 @@
           ]
         },
         {
+          "name": "--no-edit",
+          "tip": [
+            "Use the selected commit message without launching an editor."
+          ]
+        },
+        {
           "name": "--amend",
           "tip": [
             "Modify the message of the last commit(Create a new commit, replacing the last one)"
@@ -453,6 +459,33 @@
           "tip": [
             "Usually recording a commit that has the exact same tree as its sole parent commit is a mistake, and the command prevents you from making such a commit.\n",
             "This option bypasses the safety, and is primarily for use by foreign SCM interface scripts."
+          ]
+        },
+        {
+          "name": "--date",
+          "tip": [
+            "U: --date <date>\n",
+            "Set the author date for the commit."
+          ],
+          "next": [
+            {
+              "name": "(Get-Date)",
+              "tip": [
+                "Use the current date and time."
+              ]
+            },
+            {
+              "name": "'2025-01-01'",
+              "tip": [
+                "Specify a date."
+              ]
+            },
+            {
+              "name": "'2025-01-01 12:00:00'",
+              "tip": [
+                "Specify a date and time."
+              ]
+            }
           ]
         },
         {
@@ -3280,7 +3313,7 @@
     {
       "name": "--exec-path",
       "tip": [
-        "U: --exec-path[=<path>]\n",
+        "U: --exec-path [<path>]\n",
         "Path to wherever your core Git programs are installed.\n",
         "This can also be controlled by setting the GIT_EXEC_PATH environment variable.\n",
         "If no path is given, git will print the current setting and then exit."
@@ -3325,9 +3358,9 @@
       ]
     },
     {
-      "name": "--git-dir=",
+      "name": "--git-dir",
       "tip": [
-        "U: --git-dir=<path>\n",
+        "U: --git-dir <path>\n",
         "Set the path to the repository (\".git\" directory).\n",
         "This can also be controlled by setting the GIT_DIR environment variable.\n",
         "It can be an absolute path or relative path to current working directory."
@@ -3335,18 +3368,18 @@
       "next": 0
     },
     {
-      "name": "--work-tree=",
+      "name": "--work-tree",
       "tip": [
-        "U: --work-tree=<path>\n",
+        "U: --work-tree <path>\n",
         "Set the path to the working tree. It can be an absolute path or a path relative to the current working directory.\n",
         "This can also be controlled by setting the GIT_WORK_TREE environment variable and the core.worktree configuration variable"
       ],
       "next": 0
     },
     {
-      "name": "--namespace=",
+      "name": "--namespace",
       "tip": [
-        "U: --namespace=<path>\n",
+        "U: --namespace <path>\n",
         "Set the Git namespace.\n",
         "Equivalent to setting the GIT_NAMESPACE environment variable."
       ],
@@ -3418,18 +3451,18 @@
       ]
     },
     {
-      "name": "--list-cmds=",
+      "name": "--list-cmds",
       "tip": [
-        "U: --list-cmds=<group>[,<group>…​]\n",
+        "U: --list-cmds <group>[,<group>…​]\n",
         "List commands by group.\n",
         "This is an internal/experimental option and may change or be removed in the future."
       ],
       "next": 0
     },
     {
-      "name": "--attr-source=",
+      "name": "--attr-source",
       "tip": [
-        "U: --attr-source=<tree-ish>\n",
+        "U: --attr-source <tree-ish>\n",
         "Read gitattributes from <tree-ish> instead of the worktree.\n",
         "This is equivalent to setting the GIT_ATTR_SOURCE environment variable."
       ],
