feat(completions): update scoop

--- a/completions/scoop/language/en-US.json
+++ b/completions/scoop/language/en-US.json
@@ -1052,24 +1052,28 @@
               "name": "1",
               "tip": [
                 "Default value\n",
+                "Attempt to terminate processes before uninstallation/update.\n",
                 "Refer to: https://gitee.com/abgox/abyss#config"
               ]
             },
             {
               "name": "12",
               "tip": [
+                "Attempt to terminate processes before uninstallation/update, and delete the files/directories created via Link.\n",
                 "Refer to: https://gitee.com/abgox/abyss#config"
               ]
             },
             {
               "name": "13",
               "tip": [
+                "Attempt to terminate processes before uninstallation/update, and delete the temporary data.\n",
                 "Refer to: https://gitee.com/abgox/abyss#config"
               ]
             },
             {
               "name": "123",
               "tip": [
+                "Attempt to terminate processes before uninstallation/update, delete the files/directories created via Link, and delete the temporary data.\n",
                 "Refer to: https://gitee.com/abgox/abyss#config"
               ]
             }
@@ -1083,18 +1087,21 @@
               "name": "1",
               "tip": [
                 "Default value\n",
+                "Create shortcuts defined in the manifest.\n",
                 "Refer to: https://gitee.com/abgox/abyss#config"
               ]
             },
             {
               "name": "0",
               "tip": [
+                "Don't create shortcuts defined in the manifest.\n",
                 "Refer to: https://gitee.com/abgox/abyss#config"
               ]
             },
             {
               "name": "2",
               "tip": [
+                "If the app is installed via installer, don't create shortcuts defined in the manifest; otherwise, create them.\n",
                 "Refer to: https://gitee.com/abgox/abyss#config"
               ]
             }
@@ -1105,7 +1112,10 @@
           "hide": true,
           "next": [
             {
-              "name": "https://github.com"
+              "name": "\"^https://github.com|||^https://raw.githubusercontent.com\"",
+              "tip": [
+                "Replace URLs starting with https://github.com and https://raw.githubusercontent.com"
+              ]
             }
           ]
         },
@@ -1114,7 +1124,10 @@
           "hide": true,
           "next": [
             {
-              "name": "https://gh-proxy.com/github.com"
+              "name": "\"https://gh-proxy.com/github.com|||https://gh-proxy.com/raw.githubusercontent.com\"",
+              "tip": [
+                "Replace with https://gh-proxy.com/github.com and https://gh-proxy.com/raw.githubusercontent.com"
+              ]
             }
           ]
         },
