--- a/completions/scoop/language/zh-CN.json
+++ b/completions/scoop/language/zh-CN.json
@@ -1050,24 +1050,28 @@
               "name": "1",
               "tip": [
                 "默认值\n",
+                "卸载/更新时先尝试终止相关进程\n",
                 "详情参考: https://gitee.com/abgox/abyss#config"
               ]
             },
             {
               "name": "12",
               "tip": [
+                "卸载/更新时先尝试终止相关进程，然后删除通过 Link 创建的文件或目录\n",
                 "详情参考: https://gitee.com/abgox/abyss#config"
               ]
             },
             {
               "name": "13",
               "tip": [
+                "卸载/更新时先尝试终止相关进程，然后删除临时数据\n",
                 "详情参考: https://gitee.com/abgox/abyss#config"
               ]
             },
             {
               "name": "123",
               "tip": [
+                "卸载/更新时先尝试终止相关进程，然后删除通过 Link 创建的文件或目录以及临时数据\n",
                 "详情参考: https://gitee.com/abgox/abyss#config"
               ]
             }
@@ -1081,18 +1085,21 @@
               "name": "1",
               "tip": [
                 "默认值\n",
+                "创建清单中定义的快捷方式\n",
                 "详情参考: https://gitee.com/abgox/abyss#config"
               ]
             },
             {
               "name": "0",
               "tip": [
+                "不创建清单中定义的快捷方式\n",
                 "详情参考: https://gitee.com/abgox/abyss#config"
               ]
             },
             {
               "name": "2",
               "tip": [
+                "如果应用使用安装程序，就不创建清单中定义的快捷方式，否则就创建\n",
                 "详情参考: https://gitee.com/abgox/abyss#config"
               ]
             }
@@ -1103,7 +1110,10 @@
           "hide": true,
           "next": [
             {
-              "name": "https://github.com"
+              "name": "\"^https://github.com|||^https://raw.githubusercontent.com\"",
+              "tip": [
+                "替换以 https://github.com 和 https://raw.githubusercontent.com 开头的 URL"
+              ]
             }
           ]
         },
@@ -1112,7 +1122,10 @@
           "hide": true,
           "next": [
             {
-              "name": "https://gh-proxy.com/github.com"
+              "name": "\"https://gh-proxy.com/github.com|||https://gh-proxy.com/raw.githubusercontent.com\"",
+              "tip": [
+                "替换为 https://gh-proxy.com/github.com 和 https://gh-proxy.com/raw.githubusercontent.com"
+              ]
             }
           ]
         },
