feat(completions): update psc

--- a/completions/psc/language/en-US.json
+++ b/completions/psc/language/en-US.json
@@ -1308,6 +1308,22 @@
               ]
             },
             {
+              "name": "completion_suffix",
+              "tip": [
+                "Current Value: \"{{ $PSCompletions.config.completion_suffix }}\" (Default: \" \")\n",
+                "Set the completion suffix, which will be automatically added after applying the completion.\n",
+                "The default is a space, which is used to simplify unnecessary space key presses."
+              ],
+              "next": [
+                {
+                  "name": "\" \"",
+                  "tip": [
+                    "Set \" \" (Default)"
+                  ]
+                }
+              ]
+            },
+            {
               "name": "enable_completions_sort",
               "tip": [
                 "Current Value: {{ $PSCompletions.config.enable_completions_sort }} (Default: 1, it means enabled.)\n",
@@ -1813,7 +1829,7 @@
       ],
       "done": [
         "<@Green>PSCompletions's configuration modified successfully!\n",
-        "<@Blue>{{ $config_item }}<@Green>: <@Magenta>{{ $old_value }}<@Green> => <@Magenta>{{ $new_value }}"
+        "<@Blue>{{ $config_item }}<@Green>: <@Magenta>\"{{ $old_value }}\"<@Green> => <@Magenta>\"{{ $new_value }}\""
       ],
       "err": {
         "one_or_zero": [
@@ -1876,7 +1892,7 @@
       ],
       "done": [
         "<@Magenta>{{ $completion }}<@Green>'s special configuration modified successfully!\n",
-        "<@Blue>{{ $config_item }}<@Green>: <@Magenta>{{ $old_value }}<@Green> => <@Magenta>{{ $new_value }}"
+        "<@Blue>{{ $config_item }}<@Green>: <@Magenta>\"{{ $old_value }}\"<@Green> => <@Magenta>\"{{ $new_value }}\""
       ],
       "err": {
         "min": [
@@ -1929,7 +1945,7 @@
       ],
       "done": [
         "<@Green>Configuration modified successfully!\n",
-        "<@Blue>{{ $config_item }}<@Green>: <@Magenta>{{ $old_value }}<@Green> => <@Magenta>{{ $new_value }}"
+        "<@Blue>{{ $config_item }}<@Green>: <@Magenta>\"{{ $old_value }}\"<@Green> => <@Magenta>\"{{ $new_value }}\""
       ],
       "symbol": {
         "example": [
