--- a/completions/psc/language/zh-CN.json
+++ b/completions/psc/language/zh-CN.json
@@ -1315,6 +1315,22 @@
               ]
             },
             {
+              "name": "completion_suffix",
+              "tip": [
+                "当前值: \"{{ $PSCompletions.config.completion_suffix }}\" (默认值为 \" \")\n",
+                "设置补全后缀，当应用补全后，会自动补充这个后缀。\n",
+                "默认为一个空格，用于简化不必要的空格按键。"
+              ],
+              "next": [
+                {
+                  "name": "\" \"",
+                  "tip": [
+                    "设置为 \" \" (默认值)。"
+                  ]
+                }
+              ]
+            },
+            {
               "name": "enable_completions_sort",
 
               "tip": [
@@ -1826,7 +1842,7 @@
       ],
       "done": [
         "<@Green>PSCompletions 的配置修改成功!\n",
-        "<@Blue>{{ $config_item }}<@Green>: <@Magenta>{{ $old_value }}<@Green> => <@Magenta>{{ $new_value }}"
+        "<@Blue>{{ $config_item }}<@Green>: <@Magenta>\"{{ $old_value }}\"<@Green> => <@Magenta>\"{{ $new_value }}\""
       ],
       "err": {
         "one_or_zero": [
@@ -1889,7 +1905,7 @@
       ],
       "done": [
         "<@Magenta>{{ $completion }}<@Green> 的特殊配置修改成功!\n",
-        "<@Blue>{{ $config_item }}<@Green>: <@Magenta>{{ $old_value }}<@Green> => <@Magenta>{{ $new_value }}"
+        "<@Blue>{{ $config_item }}<@Green>: <@Magenta>\"{{ $old_value }}\"<@Green> => <@Magenta>\"{{ $new_value }}\""
       ],
       "err": {
         "min": [
@@ -1942,7 +1958,7 @@
       ],
       "done": [
         "<@Green>配置修改成功!\n",
-        "<@Blue>{{ $config_item }}<@Green>: <@Magenta>{{ $old_value }}<@Green> => <@Magenta>{{ $new_value }}"
+        "<@Blue>{{ $config_item }}<@Green>: <@Magenta>\"{{ $old_value }}\"<@Green> => <@Magenta>\"{{ $new_value }}\""
       ],
       "symbol": {
         "example": [
