--- a/completions/psc/language/en-US.json
+++ b/completions/psc/language/en-US.json
@@ -23,7 +23,7 @@
           "tip": [
             "Add all completions.\n",
             "Note: Add many completions may cause PowerShell to load slowly for the start up.\n",
-            "      It's recommended to add what you need."
+            "      It's recommended to add as needed rather than adding all completions."
           ]
         }
       ],
@@ -1520,25 +1520,38 @@
     },
     "desc": [
       "<@Cyan>Current module version: <@Magenta>{{ $PSCompletions.version }}<@Cyan>\n",
-      "Module version log:\n",
+      "\n",
+      "Module version changelog:\n",
       "  Github: <@Blue>https://github.com/abgox/PSCompletions/blob/main/module/CHANGELOG.md<@Cyan>\n",
       "  Gitee : <@Blue>https://gitee.com/abgox/PSCompletions/blob/main/module/CHANGELOG.md<@Cyan>\n",
       "\n",
       "<@Blue>PSCompletions<@Cyan> is simple, you just need to enter <@Magenta>psc<@Cyan>, press <@Magenta>Space<@Cyan> and <@Magenta>Tab<@Cyan> key, you will quickly learn all usages by reading the completion tip.\n",
       "\n",
+      "<@Blue>PSCompletions<@Cyan> has a powerful completion menu, and here are some key bindings:\n",
+      "  - Apply the selected completion item: <@Magenta>Enter<@Cyan> | <@Magenta>Space<@Cyan>\n",
+      "      - You can also use <@Magenta>Tab<@Cyan> when there's only one completion.\n",
+      "  - Delete filter characters: <@Magenta>Backspace<@Cyan>\n",
+      "  - Exit the completion menu: <@Magenta>Esc<@Cyan> | <@Magenta>Ctrl + c<@Cyan>\n",
+      "      - You can also use <@Magenta>Backspace<@Cyan> when there're no characters in the filter area.\n",
+      "  - Select previous completion item:  <@Magenta>Up<@Cyan>  | <@Magenta>Left<@Cyan>  | <@Magenta>Shift + Tab<@Cyan> | <@Magenta>Ctrl + u<@Cyan> | <@Magenta>Ctrl + p<@Cyan>\n",
+      "  - Select   next   completion item: <@Magenta>Down<@Cyan> | <@Magenta>Right<@Cyan> |     <@Magenta>Tab<@Cyan>     | <@Magenta>Ctrl + d<@Cyan> | <@Magenta>Ctrl + n<@Cyan>\n",
+      "\n",
       "<@Blue>PSCompletions<@Cyan> will take up two global names.\n",
-      "  <@Magenta>PSCompletions<@Cyan> => A function name. The core function of the module export. (<@Magenta>psc<@Cyan> is actually its alias.)\n",
-      " <@Magenta>$PSCompletions<@Cyan> => A variable name. Save all data related to the module. (<@Yellow>You can't modify it.<@Cyan>)\n",
+      "  <@Magenta>PSCompletions<@Cyan>: A function name. The core function of the module export. (<@Magenta>psc<@Cyan> is actually its alias.)\n",
+      " <@Magenta>$PSCompletions<@Cyan>: A variable name. Save all data related to the module. (<@Yellow>You can't modify it.<@Cyan>)\n",
       "\n",
       "For more information, please visit the project:\n",
       "  Website : <@Blue>https://pscompletions.abgox.com<@Cyan>\n",
       "  Github  : <@Blue>https://github.com/abgox/PSCompletions<@Cyan>\n",
       "  Gitee   : <@Blue>https://gitee.com/abgox/PSCompletions<@Cyan>\n",
-      "When you have a problem using it, you can submit an issue. https://github.com/abgox/PSCompletions/issues\n",
-      "If <@Blue>PSCompletions<@Cyan> is helpful to you, please consider giving it a <@Yellow>Star<@Cyan>.\n"
+      "\n",
+      "If you have a problem using it, you can submit an issue: https://github.com/abgox/PSCompletions/issues\n",
+      "\n",
+      "If <@Blue>PSCompletions<@Cyan> is helpful to you, please consider giving it a <@Yellow>Star<@Cyan>."
     ],
     "description": [
       "<@Blue>PSCompletions(<@Magenta>psc<@Cyan>) --- PowerShell Completions Manager Module\n",
+      "\n",
       "{{ $PSCompletions.info.desc }}"
     ],
     "init_info": [
@@ -1602,13 +1615,10 @@
       "But it's not recommended to hide it, it's a kind tip."
     ],
     "update_has": [
-      "<@Cyan>--------------------\n",
-      "Updatable completions: <@Blue>{{ $PSCompletions.update -join ' ' }}<@Cyan>\n",
-      "You can update them by running the following command:\n",
-      "<@Magenta>psc update *"
+      "<@Cyan>Updatable completions: <@Blue>{{ $PSCompletions.update -join ' ' }}<@Cyan>\n",
+      "Update them: <@Magenta>psc update *"
     ],
     "update_no": [
-      "<@Cyan>--------------------\n",
       "<@Green>All the completions are up to date!"
     ],
     "param_min": "<@Red>Too few parameters.",
