--- a/completions/psc/language/zh-CN.json
+++ b/completions/psc/language/zh-CN.json
@@ -23,7 +23,7 @@
           "tip": [
             "添加所有的补全。\n",
             "注意：添加大量的补全可能会导致 PowerShell 启动加载速度变得慢一点。\n",
-            "      建议添加自己需要使用的补全。"
+            "      推荐按需添加，而不是添加所有补全。"
           ]
         }
       ],
@@ -1533,25 +1533,38 @@
     },
     "desc": [
       "<@Cyan>当前模块版本: <@Magenta>{{ $PSCompletions.version }}<@Cyan>\n",
+      "\n",
       "模块版本日志:\n",
       "  Github: <@Blue>https://github.com/abgox/PSCompletions/blob/main/module/CHANGELOG.zh-CN.md<@Cyan>\n",
       "  Gitee : <@Blue>https://gitee.com/abgox/PSCompletions/blob/main/module/CHANGELOG.zh-CN.md<@Cyan>\n",
       "\n",
       "<@Blue>PSCompletions<@Cyan> 命令简单, 只需要输入 <@Magenta>psc<@Cyan> 并按下 <@Magenta>空格<@Cyan> 和 <@Magenta>Tab<@Cyan> 键, 通过补全提示信息，你会快速了解所有命令用法。\n",
       "\n",
+      "<@Blue>PSCompletions<@Cyan> 拥有一个强大的补全菜单，以下是相关的按键绑定:\n",
+      "  - 选用当前选中的补全项: <@Magenta>Enter<@Cyan> (回车) | <@Magenta>Space<@Cyan> (空格)\n",
+      "      - 当只有一个补全项时，也可以使用 <@Magenta>Tab<@Cyan>\n",
+      "  - 删除过滤字符: <@Magenta>Backspace<@Cyan> (退格)\n",
+      "  - 退出补全菜单: <@Magenta>Esc<@Cyan> | <@Magenta>Ctrl + c<@Cyan>\n",
+      "      - 当过滤区域没有字符时，也可以使用 <@Magenta>Backspace<@Cyan> (退格) 退出补全菜单\n",
+      "  - 选择上一个补全项:  <@Magenta>Up<@Cyan>  | <@Magenta>Left<@Cyan>  | <@Magenta>Shift + Tab<@Cyan> | <@Magenta>Ctrl + u<@Cyan> | <@Magenta>Ctrl + p<@Cyan>\n",
+      "  - 选择下一个补全项: <@Magenta>Down<@Cyan> | <@Magenta>Right<@Cyan> |     <@Magenta>Tab<@Cyan>     | <@Magenta>Ctrl + d<@Cyan> | <@Magenta>Ctrl + n<@Cyan>\n",
+      "\n",
       "<@Blue>PSCompletions<@Cyan> 模块只会占用两个全局命名\n",
-      "  <@Magenta>PSCompletions<@Cyan> => 函数名, 模块导出的核心函数(<@Magenta>psc<@Cyan> 其实就是它的别名)\n",
-      " <@Magenta>$PSCompletions<@Cyan> => 变量名, 存储模块相关的所有数据(<@Yellow>你不能修改它<@Cyan>)\n",
+      "  <@Magenta>PSCompletions<@Cyan>: 函数名, 模块导出的核心函数 (<@Magenta>psc<@Cyan> 其实就是它的别名)\n",
+      " <@Magenta>$PSCompletions<@Cyan>: 变量名, 存储模块相关的所有数据 (<@Yellow>你不能修改它<@Cyan>)\n",
       "\n",
       "更多相关信息, 请访问:\n",
       "  Website : <@Blue>https://pscompletions.abgox.com<@Cyan>\n",
       "  Github  : <@Blue>https://github.com/abgox/PSCompletions<@Cyan>\n",
       "  Gitee   : <@Blue>https://gitee.com/abgox/PSCompletions<@Cyan>\n",
+      "\n",
       "如果有使用问题, 请提交 issue: https://github.com/abgox/PSCompletions/issues\n",
-      "如果 <@Blue>PSCompletions<@Cyan> 对你有所帮助, 请给这个项目一个 <@Yellow>Star<@>\n"
+      "\n",
+      "如果 <@Blue>PSCompletions<@Cyan> 对你有所帮助, 请给这个项目一个 <@Yellow>Star<@>"
     ],
     "description": [
       "<@Blue>PSCompletions(<@Magenta>psc<@Cyan>) --- PowerShell 补全管理模块\n",
+      "\n",
       "{{ $PSCompletions.info.desc }}"
     ],
     "init_info": [
@@ -1615,13 +1628,10 @@
       "但是不建议你这样做, 它是一个很恰当的提示"
     ],
     "update_has": [
-      "<@Cyan>--------------------\n",
-      "可以更新的补全: <@Blue>{{ $PSCompletions.update -join ' ' }}<@Cyan>\n",
-      "你可以运行以下命令去更新它们:\n",
-      "<@Magenta>psc update *"
+      "<@Cyan>可以更新的补全: <@Blue>{{ $PSCompletions.update -join ' ' }}<@Cyan>\n",
+      "更新它们: <@Magenta>psc update *"
     ],
     "update_no": [
-      "<@Cyan>--------------------\n",
       "<@Green>已添加的补全都是最新的！"
     ],
     "param_min": "<@Red>传入的参数过少。",
