feat(completions): update scoop

--- a/completions/scoop/language/en-US.json
+++ b/completions/scoop/language/en-US.json
@@ -1101,7 +1101,7 @@
             {
               "name": "2",
               "tip": [
-                "If the app is installed via installer, don't create shortcuts defined in the manifest; otherwise, create them.\n",
+                "If the app creates shortcuts via installer, don't create shortcuts defined in the manifest; otherwise, create them.\n",
                 "Refer to: https://gitee.com/abgox/abyss#config"
               ]
             }
