--- a/completions/scoop/language/zh-CN.json
+++ b/completions/scoop/language/zh-CN.json
@@ -1099,7 +1099,7 @@
             {
               "name": "2",
               "tip": [
-                "如果应用使用安装程序，就不创建清单中定义的快捷方式，否则就创建\n",
+                "如果应用使用安装程序创建了快捷方式，就不创建清单中定义的快捷方式，否则就创建\n",
                 "详情参考: https://gitee.com/abgox/abyss#config"
               ]
             }
