feat(completions): update git

--- a/completions/git/language/en-US.json
+++ b/completions/git/language/en-US.json
@@ -83,7 +83,7 @@
         {
           "name": "-b",
           "alias": [
-            "--initial-branch="
+            "--initial-branch"
           ],
           "tip": [
             "U: -b <branch-name> | --initial-branch <branch-name>\n",
@@ -1802,6 +1802,14 @@
         "Show information related to the current commit and changes to files\n",
         "E: show                 --- Show HEAD\n",
         "   show <commit_hash>   --- Show the commit"
+      ],
+      "options": [
+        {
+          "name": "-s"
+        },
+        {
+          "name": "--format=fuller"
+        }
       ],
       "next": []
     },
