--- a/completions/git/language/zh-CN.json
+++ b/completions/git/language/zh-CN.json
@@ -1800,6 +1800,14 @@
         "E: show                 --- 显示 HEAD\n",
         "   show <commit_hash>   --- 显示提交"
       ],
+      "options": [
+        {
+          "name": "-s"
+        },
+        {
+          "name": "--format=fuller"
+        }
+      ],
       "next": []
     },
     {
