--- a/completions/uv/language/zh-CN.json
+++ b/completions/uv/language/zh-CN.json
@@ -4,6 +4,11 @@
       "name": "run",
       "tip": [
         "Run a command or script"
+      ],
+      "next": [
+        {
+          "name": "python"
+        }
       ]
     },
     {
@@ -58,6 +63,16 @@
       "name": "python",
       "tip": [
         "Manage Python versions and installations"
+      ],
+      "next": [
+        {
+          "name": "install",
+          "options": [
+            {
+              "name": "--force"
+            }
+          ]
+        }
       ]
     },
     {
