feat(completions): update git

--- a/completions/git/language/en-US.json
+++ b/completions/git/language/en-US.json
@@ -983,6 +983,19 @@
           "tip": [
             "Switch to the previously switched branch."
           ]
+        },
+        {
+          "name": "-f",
+          "alias": [
+            "--force",
+            "--discard-changes"
+          ],
+          "tip": [
+            "Proceed even if the index or the working tree differs from HEAD.\n",
+            "Both the index and working tree are restored to match the switching target.\n",
+            "If --recurse-submodules is specified, submodule content is also restored to match the switching target.\n",
+            "This is used to throw away local changes."
+          ]
         }
       ]
     },
@@ -3146,6 +3159,14 @@
       "name": "update-index",
       "tip": [
         "Register file contents in the index."
+      ],
+      "options": [
+        {
+          "name": "--refresh",
+          "tip": [
+            "Looks at the current index and checks to see if merges or updates are needed by checking stat() information."
+          ]
+        }
       ]
     },
     {
