--- a/completions/git/language/zh-CN.json
+++ b/completions/git/language/zh-CN.json
@@ -981,6 +981,19 @@
           "tip": [
             "切换到之前切换的分支。"
           ]
+        },
+        {
+          "name": "-f",
+          "alias": [
+            "--force",
+            "--discard-changes"
+          ],
+          "tip": [
+            "即使索引或工作树与 HEAD 不同，也继续执行。\n",
+            "索引和工作树都被恢复为与切换目标一致的状态。\n",
+            "如果指定了--recurse-submodules，子模块内容也会被恢复以匹配切换目标。\n",
+            "这用于丢弃本地更改。"
+          ]
         }
       ]
     },
@@ -3143,6 +3156,14 @@
       "name": "update-index",
       "tip": [
         "将文件内容注册到索引中。"
+      ],
+      "options": [
+        {
+          "name": "--refresh",
+          "tip": [
+            "查看当前索引，并通过检查 stat() 信息来确定是否需要合并或更新。"
+          ]
+        }
       ]
     },
     {
