feat(completions): update psc

--- a/completions/psc/language/en-US.json
+++ b/completions/psc/language/en-US.json
@@ -1509,6 +1509,19 @@
       ]
     }
   ],
+  "options": [
+    {
+      "name": "--help",
+      "alias": [
+        "-?",
+        "-h"
+      ],
+      "tip": [
+        "U: psc [-h|--help|-?]\n",
+        "Display the help information for PSCompletions(psc)"
+      ]
+    }
+  ],
   "info": {
     "completion_info": {
       "url": "https://github.com/abgox/PSCompletions",
