--- a/completions/psc/language/zh-CN.json
+++ b/completions/psc/language/zh-CN.json
@@ -1522,6 +1522,19 @@
       ]
     }
   ],
+  "options": [
+    {
+      "name": "--help",
+      "alias": [
+        "-?",
+        "-h"
+      ],
+      "tip": [
+        "U: psc [-h|--help|-?]\n",
+        "显示 PSCompletions(psc) 的帮助信息"
+      ]
+    }
+  ],
   "info": {
     "completion_info": {
       "url": "https://github.com/abgox/PSCompletions",
